# delta_compression_framework

./: .gitignore  CMakeLists.txt  config.h  config.toml  crc_simhash.toml  delta_compression.cpp  delta_compression.h  down_load_test_data.sh  filter_strategy.h  finesse.toml  main.cpp  odess.toml  pipeline_delta_compression.cpp  pipeline_delta_compression.h  readme.md  recover_all_file.toml  recover_file.cpp  recover_file.h  recover_single_file.toml
3party/xdelta3/: CMakeLists.txt  config.h  xdelta3.h
chunk/: CMakeLists.txt  chunk.h  chunker.h  crc_cdc.cpp  crc_cdc.h  fast_cdc.cpp  fast_cdc.h  rabin_cdc.cpp  rabin_cdc.h
dedup/: dedup.h
encoder/: CMakeLists.txt  encoder.h  xdelta.h  xdelta_test.cpp
experiments/: CMakeLists.txt  hamming_distance.cpp  modify_chunk.cpp
feature/: CMakeLists.txt  crc_simhash_feature.cpp  feature.h  features.cpp  features.h  finesse_feature.cpp  odess_feature.cpp
index/: CMakeLists.txt  best_fit_index.cpp  best_fit_index.h  index.h  naive_multi_index_hamming.cpp  naive_multi_index_hamming.h  palantir_index.cpp  palantir_index.h  super_feature_index.cpp  super_feature_index.h
storage/: CMakeLists.txt  cache.cpp  cache.h  file_meta.h  storage.cpp  storage.h
task/: recover.h
utils/: CMakeLists.txt  gear.h  hamming_distance.h  mapped_file.h  rabin.cpp  rabin.h  sha1.cpp  sha1.h  simhash.cpp  simhash.h
